Fix layout alignment by removing Vite default width restrictions

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 header {
